--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
     <!-- <main> -->
 
         <main>
+            <!-- <button> -->
+            <form action=""></form>
+                <button class="add-task">Add Task</button> <button class="add-section">Add Section</button>
+            </form>
+            <hr>
+
             
+
+            <!-- </button> -->
         </main>
 
     <!-- </main> -->
