prima modifica lista

--- a/index.html
+++ b/index.html
@@ -31,7 +31,34 @@
             </form>
             <hr>
 
-            
+            <h3><strong>&#11206;New Task</strong></h3>
+
+            <ul>
+                <li>Quarterly Newsletter <span>Editorial</span></li>
+            </ul>
+
+            <h3><strong>&#11206;Today</strong></h3>
+
+            <ul>
+                <li>Recruiting blog post <span>Editorial</span></li>
+                <li>Mobile app Luaunch <span>Q1 Goals</span></li>
+                <li>Interview John H. <span>Recruiting</span></li>
+                <li>Summit update to mobile storefronts <span>Mobile</span></li>
+            </ul>
+
+            <h3><strong>&#11206;Up Coming</strong></h3>
+
+            <ul>
+                <li>Schedule meeting with Alex <span>Editorial</span></li>
+                <li>Homepage refresh <span>Websites</span></li>
+                <li>Onboard new Sales team members <span>SalesS</span></li>
+                <li>Review editorial calendar <span>Editorial</span></li>
+            </ul>
+
+
+
+
+
 
             <!-- </button> -->
         </main>
